# fast-boiler

./: .gitignore  README.md  pyproject.toml
src/fast_boiler/: main.py
src/fast_boiler.egg-info/: PKG-INFO  SOURCES.txt
src/fast_boiler/templates/: controller.py.j2  database.py.j2  main.py.j2  repo.py.j2  service.py.j2
src/fast_boiler/templates/auth/: routers.py.j2
src/fast_boiler/templates/controllers/: controller.py.j2
