[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fast-boiler"
version = "0.1.0"
authors = [
  { name = "Mukhtar Mohsin", email = "mdmukhtarmohsin@gmail.com" },
]
description = "A CLI tool to generate a FastAPI project with a Repo-Service-Controller architecture."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: FastAPI",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "typer[all]",
    "jinja2",
]

[project.urls]
"Homepage" = "https://github.com/your-username/fast-boiler"

# This creates the `fast-boiler` command and points it to the `app` object in `main.py`
[project.scripts]
fast-boiler = "fast_boiler.main:app"